hero image to mobile design to fix overflow

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -10,7 +10,10 @@
     height: 100%;
     background-size: 20px 20px;
     .hero-image {
-
+      width: 100vw;
+      display: block;
+      margin: 0 auto;
+      min-height: 401px;
     }
     .hero-left {
       @include span(12);
